fix collapses layout in tablet
@media size depend the default font-size

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -48,7 +48,7 @@ a
 article
   width 40em
   margin 3rem auto
-  @media screen and (max-width: 44em)
+  @media screen and (max-width: 40 * 1.6 em)  //@media size depend default font-size
     width 90%
 
 // index
